# comet-25

./: .gitignore  .gitmodules  CMakeLists.txt  Evaluation.md  README.md  intro.md  setup.py
csrc/: CMakeLists.txt  binding.cpp  comet.cu  ops.cuh
csrc/w4amix/: CMakeLists.txt  gemm.cu  gemm_cuda.cu  gemm_cuda.h
csrc/w4amix/comet_opt_v1/arch/: mma.h
csrc/w4amix/comet_opt_v1/device/: grouped_gemm.h
csrc/w4amix/comet_opt_v1/kernel/: default_fpA_intB_traits.h  default_grouped_gemm.h  gemm_grouped_problem_visitor.h  grouped_gemm.h  grouped_problem_visitor.h  grouped_reduction.h  mixed_gemm_B_layout.h  sk_group_problem_visitor.h
csrc/w4amix/comet_opt_v1/layout/: ft_gemm_configs.h  interleaved_numeric_conversion.h  mix_gemm_configs.h  tile_interleaved_layout.h
csrc/w4amix/comet_opt_v1/thread/: grouped_linear_combination.h
csrc/w4amix/comet_opt_v1/threadblock/: default_dq_mma.h  default_dq_mma_multistage.h  default_dq_mma_pipelined.h  default_mma.h  default_mma_bf16.h  dq_mma_base.h  dq_mma_multistage.h  dq_mma_pipelined.h  mul_streamk.h
csrc/w4amix/comet_opt_v1/warp/: default_mma_tensor_op.h  mma_tensorop_compute_B_with_f16.h  mma_tensorop_dequantizer.h
